--- a/index.html
+++ b/index.html
@@ -64,13 +64,50 @@
           <button class="hero-button btn" type="button" data-modal-open="openModalBtn">
             Замовити послугу
           </button>
-          <div class="overlay is-hidden" data-modal="modal">
+          <div class="overlay is-hidden" data-modal="modal"> 
             <div class="modal-window" data-modal="data-modal">
+              <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
               <a class="close-btn" href="#" data-modal-close="closeModalBtn">
                 <svg class="close-icon" width="18" height="18">
                   <use href="./images/icons.svg#icon-close"></use>
                 </svg>
               </a>
+              <form class="feedback" action="./recall.html">
+                <div class="feedback-group" role="group">
+                  <label class="feedback-label" for="name">Ім'я
+                    <svg class="feedback-icon" width="18" height="18">
+                      <use href="./images/icons.svg#icon-person"></use>
+                    </svg>
+                    <input class="input" type="text"> 
+                  </label>
+                  <label class="feedback-label" for="name">Телефон
+                    <input class="input" type="text" >
+                  </label>
+                  <label class="feedback-label" for="name">Пошта
+                    <input class="input" type="text" >
+                  </label>
+                  <label class="feedback-label" for="name">Коментар
+                    <textarea class="input" rows="7" placeholder="Введіть текст"></textarea>
+                  </label>
+                </div>
+                <div class="privacy-wrap">
+                  <label class="feedback-checkbox">
+                    <input class="feedback-checkbox-input" type="checkbox" name="privacy" value="privacy" />
+                    Погоджуюся з розсилкою та приймаю 
+                    <a class="feedback-link link" href="#">Умови договору</a>
+                    <div class="icon-wrap">
+                      <svg class="check-icon">
+                        <use href="./images/icons.svg#icon-checkbox" width="16" height="15"></use>
+                      </svg>
+                      <svg class="uncheck-icon">
+                        <use href="./images/icons.svg#icon-uncheck" width="16" height="15"></use>
+                      </svg>
+                    </div>
+                    
+                  </label>
+                </div>
+                <button class="submit-btn btn" type="submit">Підписатися</button>
+              </form>
               
             </div>
           </div>
@@ -435,6 +472,16 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="mailing" role="group">
+          <strong class="mailing-title title">Підпишіться на розсилку</strong>
+          <form class="mailing-form">
+            <label class="mailing-label" for="">
+              <input class="mailing-input" type="email" name="mail" placeholder="E-mail">
+
+            </label>
+            <button class="mailing-btn btn" type="submit">Підписатися</button>
+          </form>
         </div>
       </div>
     </footer>
