--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
                     <input class="feedback-checkbox-input" type="checkbox" name="privacy" value="privacy" />
                     Погоджуюся з розсилкою та приймаю 
                     <a class="feedback-link link" href="#">Умови договору</a>
-                    <div class="icon-wrap">
+                    <!-- <div class="icon-wrap">
                       <svg class="check-icon">
                         <use href="./images/icons.svg#icon-checkbox" width="16" height="15"></use>
                       </svg>
                       <svg class="uncheck-icon">
                         <use href="./images/icons.svg#icon-uncheck" width="16" height="15"></use>
                       </svg>
-                    </div>
+                    </div> -->
                     
                   </label>
                 </div>
