--- a/index.html
+++ b/index.html
@@ -75,38 +75,41 @@
               <form class="feedback" action="./recall.html">
                 <div class="feedback-group" role="group">
                   <label class="feedback-label" for="name">Ім'я
+                    <input class="input" type="text">
                     <svg class="feedback-icon" width="18" height="18">
                       <use href="./images/icons.svg#icon-person"></use>
-                    </svg>
-                    <input class="input" type="text"> 
+                    </svg> 
                   </label>
                   <label class="feedback-label" for="name">Телефон
                     <input class="input" type="text" >
+                    <svg class="feedback-icon" width="18" height="18">
+                      <use href="./images/icons.svg#icon-phone"></use>
+                    </svg>
                   </label>
                   <label class="feedback-label" for="name">Пошта
                     <input class="input" type="text" >
+                    <svg class="feedback-icon" width="18" height="18">
+                      <use href="./images/icons.svg#icon-email"></use>
+                    </svg>
                   </label>
                   <label class="feedback-label" for="name">Коментар
-                    <textarea class="input" rows="7" placeholder="Введіть текст"></textarea>
+                    <textarea class="comment-input input" rows="7" placeholder="Введіть текст"></textarea>
                   </label>
                 </div>
                 <div class="privacy-wrap">
                   <label class="feedback-checkbox">
                     <input class="feedback-checkbox-input" type="checkbox" name="privacy" value="privacy" />
                     Погоджуюся з розсилкою та приймаю 
+                    <svg class="check-icon" width="16" height="15">
+                      <use href="./images/icons.svg#icon-checkbox"></use>
+                    </svg>
+                    <svg class="uncheck-icon"  width="16" height="15">
+                      <use href="./images/icons.svg#icon-uncheck"></use>
+                    </svg>
                     <a class="feedback-link link" href="#">Умови договору</a>
-                    <!-- <div class="icon-wrap">
-                      <svg class="check-icon">
-                        <use href="./images/icons.svg#icon-checkbox" width="16" height="15"></use>
-                      </svg>
-                      <svg class="uncheck-icon">
-                        <use href="./images/icons.svg#icon-uncheck" width="16" height="15"></use>
-                      </svg>
-                    </div> -->
-                    
                   </label>
                 </div>
-                <button class="submit-btn btn" type="submit">Підписатися</button>
+                <button class="submit-btn btn" type="submit">Відправити</button>
               </form>
               
             </div>
@@ -478,7 +481,6 @@
           <form class="mailing-form">
             <label class="mailing-label" for="">
               <input class="mailing-input" type="email" name="mail" placeholder="E-mail">
-
             </label>
             <button class="mailing-btn btn" type="submit">Підписатися</button>
           </form>
