--- a/portfolio.html
+++ b/portfolio.html
@@ -325,6 +325,15 @@
             </li>
           </ul>
         </div>
+        <div class="mailing" role="group">
+          <strong class="mailing-title title">Підпишіться на розсилку</strong>
+          <form class="mailing-form">
+            <label class="mailing-label" for="">
+              <input class="mailing-input" type="email" name="mail" placeholder="E-mail">
+            </label>
+            <button class="mailing-btn btn" type="submit">Підписатися</button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
