--- a/recall.html
+++ b/recall.html
@@ -4,14 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Дякую</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
+    <link href="./css/styles.css" rel="stylesheet" />
 </head>
 <body>
-    <section>
-        <h1></h1>
-        <svg class="phonebooth" width="50px" height="126px">
-            <use href="./images/icons.svg#icon-phonebooth"></use>
-        </svg>
+    <section class="recall">
+        <div class="recall-wrap">
+            <h1 class="recall-title title">ДЯКУЄМО ЗА ВАШ ЗАПИТ!</h1>
+            <p class="recall-text">Наш менеджер зв'яжеться з Вами найближчим часом.</p>
+            <svg class="phonebooth" width="100px" height="252px">
+                <use href="./images/icons.svg#icon-phonebooth"></use>
+            </svg>
+        </.recall-wrap>
     </section>
 </body>
 </html>
