--- a/portfolio.html
+++ b/portfolio.html
@@ -328,8 +328,8 @@
         <div class="mailing" role="group">
           <strong class="mailing-title title">Підпишіться на розсилку</strong>
           <form class="mailing-form">
-            <label class="mailing-label" for="">
-              <input class="mailing-input" type="email" name="mail" placeholder="E-mail">
+            <label class="mailing-label" for="submail">
+              <input class="mailing-input" type="email" name="mail" placeholder="E-mail" id="submail">
             </label>
             <button class="mailing-btn btn" type="submit">Підписатися</button>
           </form>
